--- a/Reminder/Properties/Settings.settings
+++ b/Reminder/Properties/Settings.settings
@@ -16,5 +16,8 @@
     <Setting Name="BlockInput" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="AutoStart" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
